tdf#125923 Fix reset button.

Reset/Revert button worked as cancel, not reset.
That commit provides reset button to do its own job.

Change-Id: I82d3e838bff3fd690cb5a901232ecb5f76257b95
Reviewed-on: https://gerrit.libreoffice.org/76341
Tested-by: Jenkins
Reviewed-by: Gülşah Köse <gulsah.kose@collabora.com>